# kFleet

./: .gitignore  Cargo.toml  README.md
migrations/: 20240101000000_initial.sql
src/: lib.rs  main.rs
src/handlers/: categories.rs  equipment.rs  mod.rs  staff.rs
templates/: _app.html  app.html  index.html
templates/TOTO/: base.html
templates/categories/: edit.html  index.html  new.html
templates/equipment/: edit.html  index.html  new.html
templates/staff/: edit.html  index.html  new.html
tests/: __test_utils.rs  test_utils.rs
tests/handlers/: staff.rs
tests/integration/: staff.rs  staff_workflow.rs
tests/snapshots/: staff.rs
