[package]
name = "kfleet"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "migrate", "chrono", "macros"] }
tera = "1.19.1"
tokio = { version = "1.46", features = ["full"] }    # Required for TcpListener
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.3"
log = "0.4.21"
anyhow = "1.0.79"
serde_json = "1.0.140"
axum-extra = { version = "0.10.1", features = ["form"] }
#testcontainers = "0.16.0"
#testcontainers-modules = "0.3.0"
#
[dev-dependencies]
# Testing framework
axum-test = "17.3.0"
# Serial test execution
serial_test = "3.2.0"
# Snapshot testing
insta = { version = "1.43.1", features = ["yaml", "json", "redactions"] }
# HTTP client for tests
reqwest = { version = "0.12.22", features = ["json"] }
# Async runtime
tokio = { version = "1.46", features = ["full", "rt-multi-thread"] }
# Database access
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "migrate"] }
# Environment management
dotenvy = "0.15.7"

# Test database management
#testcontainers = "0.16.0"
# Postgres testcontainer
#testcontainers-modules = "0.3.0"
# Runtime utilities
futures = "0.3.30"
# Test data generation
fake = { version = "2.9.1", features = ["derive"] }
